--- a/apps.json
+++ b/apps.json
@@ -82,8 +82,8 @@
     "name": "Discord ReVanced",
     "description": "Chat, hang out, and stay close with your friends and communities. ReVanced Discord unlocks Nitro sticker features and removes bloat.",
     "icon": "https://assets-global.website-files.com/6257adef93867e56f84d3092/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png",
-    "version": "205.15",
-    "latestVersion": "205.15",
+    "version": "Latest",
+    "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "RookieEnough/Orion-Data",
@@ -105,9 +105,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "youtube-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "YouTube-Revanced !music",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -126,9 +126,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "music-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "YouTube-Music",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -147,9 +147,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "photos-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Photos",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -168,14 +168,18 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/geologically/revanced-builder",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "twitter-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Twitter",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
     "size": "Varies",
-    "author": "ReVanced Team"
+    "author": "ReVanced Team",
+    "screenshots": [
+       "https://picsum.photos/seed/x1/300/600",
+       "https://picsum.photos/seed/x2/300/600"
+    ]
   },
   {
     "id": "reddit-revanced",
@@ -185,9 +189,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "reddit-extended",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Reddit",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -206,9 +210,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "twitch-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Twitch",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -227,9 +231,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "duolingo-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Duolingo",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Development",
     "platform": "Android",
@@ -248,9 +252,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "tiktok-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "TikTok",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -269,9 +273,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "instagram-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Instagram",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -290,9 +294,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "facebook-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Facebook !Messenger",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -311,9 +315,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "messenger-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Messenger",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -332,9 +336,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "spotify-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Spotify",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -353,9 +357,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "soundcloud-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "SoundCloud",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -374,9 +378,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "threads-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Threads",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -395,9 +399,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "telegram",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Telegram",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -416,9 +420,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "lightroom-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Lightroom",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -437,9 +441,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "tumblr-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Tumblr",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -458,9 +462,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "google-news-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "News",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -479,9 +483,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "photomath-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Photomath",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -500,9 +504,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "proton-mail-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Proton",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Privacy",
     "platform": "Android",
@@ -521,9 +525,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "strava-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Strava",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -542,9 +546,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "pixiv-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Pixiv",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -563,9 +567,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "bili-roaming",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Bilibili",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -584,9 +588,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "prime-video-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Prime-Video",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -605,9 +609,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "viber-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Viber",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -626,9 +630,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "crunchyroll-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Crunchyroll",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -647,9 +651,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "solid-explorer-scrazzz",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Solid-Explorer",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -668,9 +672,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "nova-launcher-indrastorms",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Nova-Launcher",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -689,9 +693,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "tasker-indrastorms",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "Tasker",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -710,9 +714,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "fx-file-explorer-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "FX-File",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -731,9 +735,9 @@
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "rar-revanced",
+    "repoUrl": "https://github.com/FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubRepo": "FiorenMas/Revanced-And-Revanced-Extended-Non-Root",
+    "githubPattern": "RAR",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
