--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
   },
   "devProfile": {
     "name": "RookieZ",
-    "bio": "Building the open web, one commit at a time. No ads, no tracking, just code.",
+    "bio": "Orion is the future, one commit at a time. No ads, no tracking, just code.",
     "image": "https://i.pinimg.com/originals/12/79/48/127948a3253396796874286570740594.jpg"
   },
   "faqs": [
