--- a/mirror_config.json
+++ b/mirror_config.json
@@ -1,17 +1,17 @@
 [
   {
+    "id": "capcut-premium",
+    "name": "CapCut Pro",
+    "downloadUrl": "https://an1.com/7029-capcut-video-editor-apk.html",
+    "mode": "scrape",
+    "wait": 30000,
+    "note": "Scraping from AN1 (ID: 7029)"
+  },
+   {
     "id": "telegram-example",
     "name": "Telegram (Direct Example)",
     "downloadUrl": "https://telegram.org/dl/android/apk",
     "mode": "direct",
-    "note": "Use 'direct' mode when the link directly triggers a download."
-  },
-  {
-    "id": "capcut-premium",
-    "name": "CapCut Pro",
-    "downloadUrl": "https://apkdone.com/capcut-mod-apk/download/",
-    "mode": "scrape",
-    "wait": 30000,
-    "note": "Scraping from APKDone"
+    "note": "Direct Link fallback"
   }
 ]
