--- a/mirror_config.json
+++ b/mirror_config.json
@@ -10,7 +10,7 @@
    {
     "id": "Mx-pro",
     "name": "MX Player Pro",
-    "downloadUrl": "https://an1.com/file_2477-dw.html",
+    "downloadUrl": "https://an1.com/2477-mx-player-pro-android.html",
     "mode": "scrape",
     "wait": 30000,
     "note": "Scraping from AN1 (ID: 2477)"
