--- a/apps.json
+++ b/apps.json
@@ -637,7 +637,7 @@
     ]
   },
    {
-    "id": "-premium",
+    "id": "capcut-premium",
     "name": "CapCut Pro",
     "description": "Premium Unlocked. Create stunning videos with advanced features, no watermark, and pro transitions unlocked.",
     "icon": "https://i.pinimg.com/474x/0d/64/2b/0d642b674f86ef3f50cf08a522237c2e.jpg",
