--- a/apps.json
+++ b/apps.json
@@ -133,7 +133,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://an1.com/7029-capcut-video-editor-apk.html",
-    "githubRepo": "https://github.com/RookieEnough/Orion-Data",
+    "githubRepo": "RookieEnough/Orion-Data",
     "releaseKeyword": "capcut",
     "packageName": "com.lemon.lvoverseas",
     "category": "Media",
