--- a/apps.json
+++ b/apps.json
@@ -461,9 +461,9 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/ProtonVPN",
-    "githubRepo": "ProtonVPN/android-app",
+    "githubRepo": "https://github.com/ProtonVPN/android-app",
     "releaseKeyword": "Proton",
-    "packageName": "pl.solidexplorer2",
+    "packageName": "ch.protonvpn.android",
     "category": "Utility",
     "platform": "Android",
     "size": "Varies",
