--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "appsJsonUrl": "https://raw.githubusercontent.com/RookieEnough/Orion-Data/refs/heads/main/apps.json",
   "mirrorJsonUrl": "https://raw.githubusercontent.com/RookieEnough/Orion-Data/refs/heads/main/mirror.json",
   "maintenanceMode": false,
+  "seasonalTheme": "christmas",
   "maintenanceMessage": "We are currently updating the server. Please check back in 30 minutes.",
   "announcement": "The Orion Store is currently in active development. We appreciate your patience as issues may occasionally arise.",
   "latestStoreVersion": "1.0.0",
