--- a/config.json
+++ b/config.json
@@ -2,11 +2,10 @@
   "appsJsonUrl": "https://raw.githubusercontent.com/RookieEnough/Orion-Data/refs/heads/main/apps.json",
   "mirrorJsonUrl": "https://raw.githubusercontent.com/RookieEnough/Orion-Data/refs/heads/main/mirror.json",
   "maintenanceMode": false,
-  "seasonalTheme": "christmas",
   "maintenanceMessage": "We are currently updating the server. Please check back in 30 minutes.",
   "announcement": "The Orion Store is currently in active development. We appreciate your patience as issues may occasionally arise.",
-  "latestStoreVersion": "1.0.0",
-  "storeDownloadUrl": "https://github.com/RookieEnough/OrionStore/releases/latest/download/app-release.apk",
+  "latestStoreVersion": "1.0.1",
+  "storeDownloadUrl": "https://github.com/RookieEnough/Orion-Store/releases/download/1.0.1/app-release.apk",
   "supportEmail": "orionstoredev@gmail.com",
   "easterEggUrl": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
   "socials": {
