--- a/apps.json
+++ b/apps.json
@@ -709,7 +709,7 @@
   {
     "id": "echo",
     "name": "Echo",
-    "description": "LocalSend is a free, open-source app that allows you to securely share files and messages with nearby devices over your local network without needing an internet connection.",
+    "description": "An Extension-based Music Player for Android, designed with a clean and intuitive UI.",
     "icon": "https://raw.githubusercontent.com/brahmkshatriya/echo/refs/heads/main/app/src/main/ic_launcher-playstore.png",
     "version": "Latest",
     "latestVersion": "Latest",
