--- a/apps.json
+++ b/apps.json
@@ -2779,6 +2779,6 @@
       "https://github.com/vivizzz007/vivi-music/blob/main/NEW-UI/1.png?raw=true",
       "https://github.com/vivizzz007/vivi-music/blob/main/NEW-UI/6.png?raw=true"
     ],
-    "releaseKeyword": "VIVI Music"
+    "releaseKeyword": "vivi"
   }
 ]
