--- a/config.json
+++ b/config.json
@@ -3,9 +3,9 @@
   "mirrorJsonUrl": "https://raw.githubusercontent.com/RookieEnough/Orion-Data/refs/heads/main/mirror.json",
   "maintenanceMode": false,
   "maintenanceMessage": "We are currently updating the server. Please check back in 30 minutes.",
-  "announcement": "Native download tracking, Smart install detection, App Request, and a new Fuel the Code RPG!",
-  "latestStoreVersion": "1.0.4",
-  "storeDownloadUrl": "https://github.com/RookieEnough/Orion-Store/releases/download/1.0.4/app-release.apk",
+  "announcement": "Native download tracking, smart install detection, and App Requests are now available along with a new Fuel the Code RPG experience! We invite users to submit more apps to help expand and enrich the Orion Library.",
+  "latestStoreVersion": "1.0.5",
+  "storeDownloadUrl": "https://github.com/RookieEnough/Orion-Store/releases/download/1.0.5/app-release.apk",
   "supportEmail": "orionstoredev@gmail.com",
   "easterEggUrl": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
   "socials": {
