--- a/apps.json
+++ b/apps.json
@@ -2902,7 +2902,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/ReVanced/revanced-manager",
     "githubRepo": "ReVanced/revanced-manager",
-    "packageName": "app.revanced.manager.flutter",
+    "packageName": "app.revanced.manager",
     "category": "Utility",
     "platform": "Android",
     "size": "Varies",
