--- a/apps.json
+++ b/apps.json
@@ -107,7 +107,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "photos",
     "packageName": "app.revanced.android.photos",
     "category": "Utility",
@@ -156,7 +156,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "RookieEnough/Revanced-Orion",
+    "githubRepo": "krvstek/rvx-apks",
     "releaseKeyword": "reddit",
     "packageName": "com.reddit.frontpage",
     "category": "Social",
@@ -560,7 +560,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "telegram",
     "packageName": "org.telegram.messenger",
     "category": "Social",
@@ -911,7 +911,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "tumblr",
     "packageName": "com.tumblr",
     "category": "Social",
@@ -937,7 +937,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/mamiiblt/instafel",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "instafel",
     "packageName": "com.instagram.android",
     "category": "Social",
@@ -961,7 +961,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "duolingo-revanced",
     "packageName": "com.duolingo",
     "category": "Educational",
@@ -987,7 +987,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "facebook",
     "packageName": "com.facebook.katana",
     "category": "Social",
@@ -1009,7 +1009,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "fx-file",
     "packageName": "nextapp.fx",
     "category": "Utility",
@@ -1035,7 +1035,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "nova",
     "packageName": "com.teslacoilsw.launcher",
     "category": "Utility",
@@ -1060,7 +1060,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "rar",
     "packageName": "com.rarlab.rar",
     "category": "Utility",
@@ -1161,7 +1161,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "strava",
     "packageName": "com.strava",
     "category": "Social",
@@ -1213,7 +1213,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "pixiv",
     "packageName": "jp.pxv.android",
     "category": "Utility",
@@ -1236,7 +1236,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "photomath",
     "packageName": "com.microblink.photomath",
     "category": "Utility",
@@ -1259,7 +1259,7 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "sarthaksinha2800-cell/Revanced-Orion",
+    "githubRepo": "RookieEnough/Revanced-Orion",
     "releaseKeyword": "messenger",
     "packageName": "com.facebook.orca",
     "category": "Social",
