--- a/apps.json
+++ b/apps.json
@@ -1353,8 +1353,8 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/crimera",
-    "githubRepo": "https://github.com/crimera/twitter-apk",
-    "releaseKeyword": "twitter-piko-material-you",
+    "githubRepo": "krvstek/rvx-apks",
+    "releaseKeyword": "x-piko",
     "packageName": "com.twitter.android",
     "category": "Social",
     "platform": "Android",
