--- a/apps.json
+++ b/apps.json
@@ -931,13 +931,13 @@
   {
     "id": "instafel",
     "name": "InstaFel",
-    "description": "A feature-rich Instagram mod offering ad-free browsing, media downloading, privacy features, and customization options.",
+    "description": "Instafel is a modified, unofficial version of the Instagram app for Android, known for providing early access to new features (alpha builds) with developer options enabled, allowing users to test experimental flags like ad-blocking or autoplay toggles, essentially giving users more control and features beyond the standard app",
     "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png",
     "version": "1.0",
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/mamiiblt/instafel",
-    "githubRepo": "RookieEnough/Revanced-Orion",
+    "githubRepo": "mamiiblt/instafel",
     "releaseKeyword": "instafel",
     "packageName": "com.instagram.android",
     "category": "Social",
