--- a/config.json
+++ b/config.json
@@ -3,9 +3,9 @@
   "mirrorJsonUrl": "https://raw.githubusercontent.com/RookieEnough/Orion-Data/refs/heads/main/mirror.json",
   "maintenanceMode": false,
   "maintenanceMessage": "We are currently updating the server. Please check back in 30 minutes.",
-  "announcement": "Version 1.0.7 has been released as an urgent hotfix. Users are strongly encouraged to explore and test the new Settings options and share their feedback.",
-  "latestStoreVersion": "1.0.7",
-  "storeDownloadUrl": "https://github.com/RookieEnough/Orion-Store/releases/download/1.0.7/app-release.apk",
+  "announcement": "Version 1.0.8 has been released. This update is the smallest patch to date and primarily focuses on resolving issues related to MicroG pop-up notifications, improving overall stability and user experience.",
+  "latestStoreVersion": "1.0.8",
+  "storeDownloadUrl": "https://github.com/RookieEnough/Orion-Store/releases/download/1.0.8/app-release.apk",
   "supportEmail": "orionstoredev@gmail.com",
   "easterEggUrl": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
   "socials": {
