Update releaseKeyword and packageName for instafel

--- a/apps.json
+++ b/apps.json
@@ -938,8 +938,8 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/mamiiblt/instafel",
     "githubRepo": "mamiiblt/instafel",
-    "releaseKeyword": "instafel",
-    "packageName": "com.instagram.android",
+    "releaseKeyword": "instafel_c_",
+    "packageName": "com.instafel.android",
     "category": "Social",
     "platform": "Android",
     "size": "Varies",
