--- a/apps.json
+++ b/apps.json
@@ -182,7 +182,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://an1.com/7029-capcut-video-editor-apk.html",
     "githubRepo": "RookieEnough/Orion-Data",
-    "releaseKeyword": "capcut-premium",
+    "releaseKeyword": "capcut",
     "packageName": "com.lemon.lvoverseas",
     "category": "Media",
     "platform": "Android",
